<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#ffffff"
        android:scrollbarThumbHorizontal="@android:drawable/btn_default_small"
        tools:context=".MainActivity">


        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
                      tools:ignore="MissingConstraints">
            <Button
                    android:id="@+id/textButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/back"
                    android:background="@drawable/list_background"
                    android:textSize="15sp"
                    android:textColor="#000000"
                    android:layout_marginStart="0dp"
                    android:drawableLeft="@drawable/ic_add_24dp"/>
            <TextView
                    android:id="@+id/personage_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:gravity="bottom|top"
                    android:textColor="#000000"
                    android:textSize="30sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"/>

            <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:addStatesFromChildren="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:paddingTop="20dp"
                    android:paddingBottom="10dp">

                <ImageView
                        android:id="@+id/profileImage"
                        android:layout_rowSpan="6"
                        android:layout_width="165dp"
                        android:layout_height="165dp"
                        android:foreground="@drawable/round_fg"
                        android:contentDescription="@string/todo"/>

                <TextView
                        android:id="@+id/lastLocation"
                        android:text="@string/last_known_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:textSize="17sp"
                        android:textColor="#FF9800"
                        android:layout_row="0"
                        android:layout_column="1"/>

                <TextView
                        android:id="@+id/locationInfo"
                        android:layout_marginTop="5dp"
                        android:layout_width="196dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:textSize="13sp"
                        android:textColor="#000000"
                        android:layout_column="1" android:layout_row="1"/>

                <TextView
                        android:id="@+id/seen"
                        android:layout_marginTop="10dp"
                        android:text="@string/episode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:textSize="15sp"
                        android:textColor="#FF9800"
                        android:layout_row="2"
                        android:layout_column="1"/>
                <TextView
                        android:id="@+id/firstSeen"
                        android:layout_width="196dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:textSize="12sp"
                        android:textColor="#000000"
                        android:layout_row="3"
                        android:layout_column="1" android:layout_marginTop="5dp"/>

                <TextView
                        android:id="@+id/status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:textSize="15sp"
                        android:textColor="#FF9800"
                        android:layout_row="4"
                        android:layout_column="1" android:layout_marginTop="5dp"
                        android:text="@string/status"/>

                <TextView
                        android:id="@+id/aboutStatus"
                        android:layout_width="196dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:textSize="12sp"
                        android:textColor="#000000"
                        android:drawableLeft="@drawable/abc_vector_test"
                        android:layout_row="5"
                        android:layout_column="1"/>

            </GridLayout>
            <TextView
                    android:id="@+id/also"
                    android:layout_width="371dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"
                    android:textColor="#000000"/>

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/character_by_location"
                    android:layout_width="wrap_content"
                    android:layout_height="885dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:dividerHeight="20.0sp"
                    android:background="@drawable/round_fg"
                    tools:ignore="NestedScrolling"/>
        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
